Mise à jour du projet

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </navbar>
 
   <header>
-    <h1>Bienvenue sur ma wishlist ! tes t est </h1>
+    <h1>Bienvenue sur ma wishlist !</h1>
   </header>
 
   <div class="gif">
