--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -78,7 +78,7 @@
       <a href="https://www.amazon.fr/ACTIVISION-Sekiro-Shadows-Die-Twice/dp/B07DTMYYH3/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=sekiro&qid=1554820398&s=videogames&sr=1-1" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/71AdXV-YtfL._SL1000_.jpg" alt="Sekiro: Shadows Die Twice" class="game" /></a>
       <figcaption>
-        Sekiro
+        Sekiro Shadows Die Twice
       </figcaption>
       <figcaption>
         28,97€
