MAJ de la page livres

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     <img src="assets/images/money.gif" alt="Gif Money">
   </div>
 
+  <p class="dateMAJ">
+    Mise à jour le 15 avril 2019
+  </p>
+
 </body>
 
 </html>
