--- a/livres.html
+++ b/livres.html
@@ -266,40 +266,41 @@
         22,90€
       </figcaption>
     </figure>
-    <!--
-    Livre 16
+
+    <!--Livre 16-->
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="books" /></a>
+      <a href="https://www.amazon.fr/f%C3%AAlure-autres-nouvelles-Francis-Fitzgerald/dp/2070457095/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald+la+felure&qid=1555427675&s=gateway&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/71hbOm4sXQL.jpg" alt="La Fêlure" class="books" /></a>
       <figcaption>
-        Just cause 4
+        Francis Scott Fitzgerald
       </figcaption>
       <figcaption>
-        28,97€
+        La Fêlure
       </figcaption>
       <figcaption>
         28,97€
       </figcaption>
     </figure>
-    -->
   </div>
 
-  <!--  <div class="booksLine">
+  <div class="booksLine">
 
-    Livre 17
+    <!--Livre 17-->
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="books" /></a>
+      <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/517sBNNkPyL.jpg" alt="Tendre Est La Nuit" class="books" /></a>
       <figcaption>
-        Just cause 4
+        Francis Scott Fitzgerald
       </figcaption>
       <figcaption>
-        28,97€
+        Tendre est la nuit
       </figcaption>
       <figcaption>
-        28,97€
+        7,20€
       </figcaption>
     </figure>
--->
-  <!--
+
+    <!--
     Livre 18
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="books" /></a>
@@ -314,7 +315,7 @@
       </figcaption>
     </figure>
 -->
-  <!--
+    <!--
     Livre 19
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="books" /></a>
@@ -330,7 +331,7 @@
     </figure>
     -->
 
-  <!--
+    <!--
     Livre 20
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="books" /></a>
@@ -344,9 +345,9 @@
         28,97€
       </figcaption>
     </figure>
-
-  </div>
     -->
+  </div>
+
 
 </body>
 
